# hypeliquid-smart-money-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  data_fetcher.py  database.py  docker-compose.yml  error_handler.py  main.py  message_formatter.py  monitor.py  pyproject.toml  requirements.txt  scheduler.py  security-report.md  telegram_bot.py  test_bot.py
monitoring/: prometheus.yml
scripts/: deploy.sh  logrotate.sh  test.sh
tests/: test_data_fetcher.py  test_database.py  test_message_formatter.py
