[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypeliquid-smart-money-bot"
version = "1.0.0"
description = "Hypeliquid Smart Money Monitoring Bot with Security Fixes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "gyc567", email = "gyc567@github.com"}
]
keywords = ["hypeliquid", "smart-money", "crypto", "monitoring", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial :: Investment"
]

dependencies = [
    "python-telegram-bot>=20.8",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "web3>=6.11.3",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/gyc567/hypeliquid-smart-money-bot"
Repository = "https://github.com/gyc567/hypeliquid-smart-money-bot.git"
Issues = "https://github.com/gyc567/hypeliquid-smart-money-bot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]